# nettle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.viewer  INPUT_CONFIG_FILE_FORMAT.md  NETTLE_FILE_FORMAT.md  README.md  RESOURCE_LIMITS_FILE_FORMAT.md  biome.json  build.rs  package-lock.json  package.json  requirements.in  resource-limits.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  pages.yml
deploy/: README.md  kubernetes.yaml
integration_tests/: README.md
integration_tests/bedrock-rtl/: README.md  br_amba_axil2apb.f  br_cdc_fifo_flops.f  br_cdc_fifo_flops_synth.f  br_counter.f  br_enc_priority_encoder.f  br_flow_xbar_rr.f  br_ram_flops.f  br_tracker_reorder_buffer_flops.f  manifest.json
integration_tests/generate/: README.md  project.f
proto/: nettle.proto
requirements/: boostedblob.in  boostedblob.txt
scripts/: build-generate-e2e-fixtures.sh  build-schematic-diff-fixtures.py  check-design-corpus.py  check-hosted-deployment.mjs  check-hosted-image.sh  check-rust-docs.py  check-toolchain.sh  generate-resource-limits.mjs  run-biome.mjs  run-netlist-e2e.mjs
src/: build_info.rs  builder.rs  compiler.rs  host.rs  lib.rs  main.rs  resource_limits.rs  server_builds.rs
src/bundle/: mod.rs
web/: .env.example  README.md  index.html  package.json  playwright.benchmark.config.ts  playwright.config.ts  playwright.pages.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+131 files in other folders)
